@@ -564,24 +564,24 @@ GITHUB_COMMIT_SOURCE = True
 
 # The executable for the filter "yui_compressor" from nikola.filters can
 # be configured here:
-# YUI_COMPRESSOR = 'yui-compressor'
+# YUI_COMPRESSOR_EXECUTABLE = 'yui-compressor'
 
 # The executable for the filter "closure_compiler" from nikola.filters can
 # be configured here:
-# CLOSURE_COMPILER = 'closure-compiler'
+# CLOSURE_COMPILER_EXECUTABLE = 'closure-compiler'
 
 # The executable for the filter "optipng" from nikola.filters can be
 # configured here:
-# OPTIPNG = 'optipng'
+# OPTIPNG_EXECUTABLE = 'optipng'
 
 # The executable for the filter "jpegoptim" from nikola.filters can be
 # configured here:
-# JPEG_OPTIM = 'jpegoptim'
+# JPEGOPTIM_EXECUTABLE = 'jpegoptim'
 
 # The executable for the filters "html_tidy_withconfig", "html_tidy_nowrap",
 # "html_tidy_wrap", "html_tidy_wrap_attr" and "html_tidy_mini" from
 # nikola.filters can be configured here:
-# HTML_TIDY = 'tidy5'
+# HTML_TIDY_EXECUTABLE = 'tidy5'
 
 
 
