@@ -5,8 +5,9 @@ Features
 --------
 * Add ``META_GENERATOR_TAG`` option in conf.py allowing the meta generator
   to be disabled if needed. (Issue #2628)
-* Add ``YUI_COMPRESSOR``, ``CLOSURE_COMPILER``, ``OPTIPNG``, ``JPEG_OPTIM``
-  and ``HTML_TIDY`` to configure executables for built-in filters.
+* Add ``YUI_COMPRESSOR_EXECUTABLE``, ``CLOSURE_COMPILER_EXECUTABLE``,
+  ``OPTIPNG_EXECUTABLE``, ``JPEGOPTIM_EXECUTABLE`` and
+  ``HTML_TIDY_EXECUTABLE`` to configure executables for built-in filters.
   (Issue #2615)
 
 Bugfixes
